# nf-neuro

./: .actrc  .ecrc  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .nf-core.yml  .prettierignore  CONTRIBUTING.md  README.md  cspell.json  markdown  nf-test.config  package-lock.json  package.json  pyproject.toml  test.json
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh  updateContentCommand.sh
.devcontainer/devops/: Dockerfile  devcontainer.json  onCreateCommand.sh  updateContentCommand.sh
.devcontainer/prototyping/: Dockerfile  devcontainer.json  initializeCommand.sh  onCreateCommand.sh  updateContentCommand.sh
.github/: pull_request_template.md  reviewers.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage_issue.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  improvement.md  new_module.md  new_subworkflow.md
.github/events/: merge_group.json
.github/workflows/: assign_reviewers.yml  lint_component.yml  manual_checks.yml  merge_queue.yml  publish_extension.yml  run_checks_suite.yml  test_component.yml  update_main.yml  update_pr.yml
assets/: multiqc_config.yml
config/: resources.config
docs/: MODULE.md  PRODUCTION.md  PROTOTYPING.md  SUBWORKFLOWS.md
docs/astro/: convert_module.py  convert_modules.py  convert_subworkflow.py  convert_subworkflows.py
docs/cspell/: neuroscience.txt
docs/environment/: DEVCONTAINER.md  DEVOPS.md  NFCORE.md  PROTOTYPING.md
modules/: environment-schema.json
tests/: nextflow.config  plugins.json  test_data.json
tests/config/: nextflow.config  nf-test.config
(+673 files in other folders)
